add more detail

--- a/resume.html
+++ b/resume.html
@@ -4,15 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resume.css">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <title>Resume</title>
 </head>
 <body>
+
         <div class="header">
-            <div>
+            <div id="row2">
+                <div class="nametext">
+                    <a class="put">PUTTIPONG</a> <a class="tha">THAMMACHART</a>
+                    <p id="jobblink">"JUNIOR FRONT END DEVELOPER"</p>
+                </div>
+                <div><img class="propic" src="bas-pic.jpg"></div>
+                <div class="contact">
+                    <h2>CONTACT</h2>
+                    <h4 style="text-align: center;">
+                        <div>
+                            <i id="telicon" style="color: crimson;" class="fas fa-mobile-alt"></i> 
+                            <!-- <a id="teltext" style="text-shadow: 0px 0px 10px white;">090 710 8377</a> &nbsp;&nbsp; -->
+                            <i id="emailicon" style="color: lime;" class="fas fa-envelope"></i> 
+                            <!-- <a id="emailtext" style="text-shadow: 0px 0px 10px white;">basputtipongz@gmail.com</a>  -->
+                            <i id="pinicon" style="text-shadow: 0px 0px 10px white;"class="fas fa-map-marker-alt"></i> 
+                            <i id="facebook" class="fab fa-facebook-square"></i>
+                            <i id="instagram" class="fab fa-instagram"></i>
+                            <i id="line" class="fab fa-line"></i>
+                        </div><br><br>
+                        <span>
+                            
+                            <!-- <a id="pintext" style="text-shadow: 0px 0px 10px white;">
+                                123 Pracha-Uthid Rat Burana Bangkok Thailand 10140</a> -->
+                        </span>
+                    </h4>
+                </div>
+            </div>
+            <div id="row1">
                 <div class="edu" style="color:white; text-align: left;">
                     <h2 style="text-align: center;">EDUCATION</h2>
                     <p >
-                        <h3>Computer Science <br> King Mongkut’s University of Technology Thonburi (2016-2020)</h3><br>
+                        <h3 style="color:pink;">Computer Science</h3><h4>King Mongkut’s University of Technology Thonburi (2016-2020)</h4><br>
                         <li>Enhanced so many project within the
                         university courses with various skill from
                         the class such as Java, Javascript, HTML,
@@ -32,41 +61,50 @@
                     </p>
                 </div>
             </div>
-            <div>
-                <div class="nametext">
-                    <a class="put">PUTTIPONG</a> <a class="tha">THAMMACHART</a>
-                </div>
-                <h1 class="blinktxt">
-                    JUNIOR FRONT END DEVELOPER
-                </h1>
-                <div style="margin-bottom: 12%;"><img class="propic" src="bas-pic.jpg"></div>
-                <div class="skill">SKILLS</div>
-            </div>
-            <div>
+            <div id="row3">
                 <div class="pro" style="color:white; text-align: left;">
                     <h2 style="text-align: center;">PROFILE</h2>
-                    <p >
-                        <h3>Computer Science <br> King Mongkut’s University of Technology Thonburi (2016-2020)</h3><br>
-                        <li>Enhanced so many project within the
-                        university courses with various skill from
-                        the class such as Java, Javascript, HTML,
-                        CSS, AngularJS, Some of ReactJS, Some of
-                        VueJS, and database technologies 
+                    
+                        <b style="color:pink;">Improved developer</b> 
+                        <li>Handled all the project in university for front end, back
+                            end, and database roles with all the
+                            techniques that I have learned from every
+                            courses
                         </li><br><br>
-                        <li>Learn how to work as a team with the any
-                        student in the same class randomly with
-                        Agile Development and Waterfall
-                        Development 
+                        <b style="color:pink;">Communication</b>
+                        <li>Used English Language
+                            in everyday life in the university with both
+                            professor and student 
                         </li><br><br>
-                        <li>Learn how to communicate in English
-                        Language for both conversation and create
-                        a document for any reason in the class with
-                        both thai and foreigner
-                        </li> 
-                    </p>
+                        <b style="color:pink;">Endeavour</b>
+                        <li> Never miss the goal that have
+                            already been set by supervisor in any
+                            project 
+                        </li><br><br>
+                        <b style="color:pink;">Productive</b>
+                        <li>Create a Senior Project within
+                            two semesters from scratch (Over Dust
+                            Application) (Android & Web base
+                            application) This application allow people
+                            to detect and share value of particle
+                            pollution (PM2.5 at that time) which are
+                            developed by AngularJS, Ionic, and IoT
+                        </li>
                 </div>
             </div>
         </div>
-        <div class="content"></div>
+        <div class="skill">
+            <div class="skill-content">
+                <h2 style="text-align: center;margin-bottom: 0px;">SKILLS</h2>
+                <div id="skillicon" style="color:white;">
+                    <i id="html" class="fab fa-html5"></i> 
+                    <i id="css" class="fab fa-css3-alt"></i>
+                    <i id="js" class="fab fa-js-square"></i>
+                    <i id="angular" class="fab fa-angular"></i>
+                    <i id="java" class="fab fa-java"></i>
+                    <i id="python" class="fab fa-python"></i>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
